--- a/views/REGISTRO.HTML
+++ b/views/REGISTRO.HTML
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REGISTRO</title>
-    <link rel="stylesheet" href="REGISTRO.CSS">
+    <link rel="stylesheet" href="general.CSS">
 </head>
 <body>
      <section class="form">
-        <img src="LOGO.jpg" alt="logo-fa-music" style="max-width: 100%;">
+        <img src="images/Central Music Logo.svg" alt="logo-fa-music" style="max-width: 100%;">
         <h2 class="nombreRegistro">REGISTRO</h2>
         <form action="" method="">
         <input type="email" class="input-style" name="email" placeholder="Ingrese su email">
