--- a/views/login.html
+++ b/views/login.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="general.css">
     <script src="https://kit.fontawesome.com/a69da99239.js" crossorigin="anonymous"></script>
 </head>
 <body class="forms">
     <div class="login-container">
         <div class="login.box">
-            <img src="LOGO.png" alt="logo-fa-music" style="max-width: 100%;">
+            <img src="images/Central Music Logo.svg" alt="logo-fa-music" style="max-width: 100%;">
         </div>
    <section class="form-container login">
       <h2 class="nombreLogin">LOGIN</h2>
