--- a/views/index.html
+++ b/views/index.html
@@ -255,7 +255,7 @@
         <div class="footer-container">
             <ul class="footer-menu-account">
                 <div></div>
-                <li class="footer-account">My Account</li>
+                <li class="footer-account"><a href="/login">My account</a></li>
                 <li>Overview</li>
                 <li>Order History</li>
                 <li>Wishlist</li>
