--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN</title>
-    <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="css/login.css">
     <script src="https://kit.fontawesome.com/a69da99239.js" crossorigin="anonymous"></script>
 </head>
 <body class="forms">
@@ -34,7 +34,7 @@
         <div class="btn-container">
          <button type="submit" class="btn btn-submit">Ingresar</button>
         </div>
-        <span><a href="register.html" class="noTengoCuenta">No tengo cuenta</a></span>
+        <span><a href="/register" class="noTengoCuenta">No tengo cuenta</a></span>
     </div>
      </section>
 </body>
