--- a/views/REGISTRO.HTML
+++ b/views/REGISTRO.HTML
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REGISTRO</title>
-    <link rel="stylesheet" href="general.CSS">
+    <link rel="stylesheet" href="css/registro.css">
 </head>
-<body>
+<body .body-register>
      <section class="form">
         <img src="images/Central Music Logo.svg" alt="logo-fa-music" style="max-width: 100%;">
         <h2 class="nombreRegistro">REGISTRO</h2>
