--- a/views/REGISTRO.HTML
+++ b/views/REGISTRO.HTML
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>REGISTRO</title>
-    <link rel="stylesheet" href="general.CSS">
+    <link rel="stylesheet" href="css/general.CSS">
 </head>
 <body>
      <section class="form">
