--- a/views/login.html
+++ b/views/login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN</title>
-    <link rel="stylesheet" href="general.css">
-    <script src="https://kit.fontawesome.com/a69da99239.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/general.css">
+    
 </head>
 <body class="forms">
     <div class="login-container">
