add details product

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,6 +1,5 @@
 
 
 @import url('general.css');
-@import url('./home/header.css');
-@import url('./home/main.css');
-@import url('./home/footer.css');
+@import url('./home/home.css');
+@import url('./detailsProduct/detailsProduct.css');
