--- a/public/CSS/home/home.css
+++ b/public/CSS/home/home.css
@@ -1,3 +1,5 @@
 @import url('header.css');
 @import url('main.css');
 @import url('footer.css');
+@import url('login.css');
+@import url('registro.css');
