fix css general

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -6,5 +6,5 @@
 /* detalle de producto*/
 @import url('./detailsProduct/detailsProduct.css');
 /* formularios */
-@import url('./home/login.css');
-@import url('./home/registro.css');
+@import url('login.css');
+@import url('registro.css');
