--- a/views/login.html
+++ b/views/login.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/694b450a1e.js" crossorigin="anonymous"></script>
     <title>LOGIN</title>
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/a69da99239.js" crossorigin="anonymous"></script>
 </head>
 <body class="forms">
