--- a/public/CSS/registro.css
+++ b/public/CSS/registro.css
@@ -20,7 +20,7 @@
 }
 .form input{
     width: 100%;
-    background-color: #fa7a03;
+    background-color:white;
     border: none;
     padding: 12px;
     color: white;
