--- a/views/registro.html
+++ b/views/registro.html
@@ -4,32 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/694b450a1e.js" crossorigin="anonymous"></script>
-    <title>REGISTRO</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
 </head>
-<body .body-register>
-     <section class="form">
-        <img src="images/Central Music Logo.svg" alt="logo-fa-music" style="max-width: 100%;">
-        <h2 class="nombreRegistro">REGISTRO</h2>
-        <form action="" method="">
-        <input type="email" class="input-style" name="email" placeholder="Ingrese su email">
-        <span class="error-message">Debe ingresar su email</span>
-        <input type="password" class="input-style" name="pass" placeholder="Ingrese una contraseña">
-                <span class="error-message">Debe ingresar su contraseña</span>
-        <input type="password" class="input-style" name="pass2" placeholder="Re-ingrese su contraseña">
-                <span class="error-message">Debe re-ingresar su contraseña</span>
+<body>
+  <div class="logo">
+    <img src="images/Central Music Logo.svg" alt="logo-fa-music" style="max-width: 100%;">
+   </div>
+    <form class="formulario">
+        <h1>REGISTRO</h1>
+
+     <div class="contenedor">
+       <div class="input-contenedor">
+         <i class="fas fa-user icon"></i>
+         <input type="text" placeholder="Nombre y Apellido">
+         <span class="error-message">Debe ingresar datos completos</span>
+        </div>
+   <div class="contenedor">
+     <div class="input-contenedor">
+          <i class="fas fa-envelope icon"></i>
+          <input type="text" placeholder="correo electronico">
+          <span class="error-message">Ingrese correo</span> 
+     </div>
+
+      <div class="input-contenedor">
+           <i class="fas fa-key icon"></i>
+           <input type="password" placeholder="Contraseña">
+           <span class="error-message">Ingresar su contraseña</span>
+      </div>
+      
+      <div class="input-contenedor">
+            <i class="fas fa-key icon"></i>
+            <input type="password" placeholder=" Repetir Contraseña">
+            <span class="error-message">Debe re-ingresar su contraseña</span>
+      </div>
+    
+     <input type="submit" class="btn solid" value="Crear cuenta" />
         <p>Estoy de Acuerdo con <a href="#">Terminos y Condiciones</a></p>
-        <div class="btn-container">
-            <span class="error-message">Hubo un error en el registro</span>
-            </div>
-        <input class="botons" type="submit" value="Registrarme"> 
-        <p><a href="#">Ya tengo Cuenta</a></p>
-
-    </section>
-
+  <div class="form--group">
+      <label for="avatar">Avatar</label>
+      <input type="file" name="avatar" id="avatar" >
+          <small class="text-danger">Campo requerido</small>
+      <span class="error-message">Hubo un error en el registro</span>
+     <button class="btn btn-outline-success" type="reset">Limpiar</button>
+     <p><a href="login.html">Ya tengo Cuenta</a></p>
+    </div>
+  </div>
+    </form>
+   
 </body>
 </html>
