--- a/views/carrito.html
+++ b/views/carrito.html
@@ -39,7 +39,7 @@
 </div> <!--cierra el producto -->
 
         <div class="btn" >
-            <button class="btn-style">Seguir Comprando</button>
+            <button class="btn-style" href="index.html">Seguir Comprando</button>
             <button class="btn-style">Finalizar Compra</button>
         </div>
 </section>
