--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -5,6 +5,8 @@
 @import url('./home/home.css');
 /* detalle de producto*/
 @import url('./detailsProduct/detailsProduct.css');
+
+@import url('./admin/addProduct.css');
 /* formularios */
 @import url('login.css');
 @import url('registro.css');
