--- a/public/CSS/detailsProduct/detailsProduct.css
+++ b/public/CSS/detailsProduct/detailsProduct.css
@@ -7,21 +7,19 @@
 
 
 .header-detailsProduct {
-    height: 250px;
-    padding: 44px 24px;
-    background: linear-gradient(180deg, #F40000 55.21%, rgba(196, 196, 196, 0) 100%);
-    
+    height: 165px;
+    padding: 44px 25px;
+    background-color: #F40000;    
 }
 
 .details-main {
     position: relative;
-    top: -115px;
+    top: 1px;
     margin-top: 0;
     border: 1px solid rgb(224, 224, 224);
     border-radius: 10px;
     background-color: #FFFFFF;
-    height: 1765px;
-    width: 90%;
+    height: 2000px;
     margin: 0 auto;
     line-height: 120%
 }
@@ -58,6 +56,10 @@
     display: flex;
     justify-content: space-between;
     padding: 10px 0;
+}
+
+.description-product {
+    font-size: 16px;
 }
 
 .details-description p:nth-child(1) {
@@ -106,11 +108,17 @@
 
 .details-product-footer {
     position: relative;
-    top: -117px;
+    top: -128px;
 }
 
 
 @media (min-width: 768px) {
+
+    .details-main {
+        height: 2211px;
+    }
+
+
     .details-main article {
         width: 100%;
     }
@@ -131,6 +139,10 @@
     .details-description p {
         font-size: 24px;
         margin-bottom: 43px;
+    }
+
+    .description-product {
+        line-height: 43px;
     }
 
     .details-description p:nth-child(1) {
@@ -208,10 +220,16 @@
         display: none;
     }
     
+    .details-product-footer {
+        position: relative;
+        top: -123px;
+    }
     
 }
 
 @media (min-width: 1353px) {
+
+    
     .product-view {
         padding: 0 90px;
 
