--- a/views/registro.html
+++ b/views/registro.html
@@ -21,37 +21,33 @@
          <input type="text" placeholder="Nombre y Apellido">
          <span class="error-message">Debe ingresar datos completos</span>
         </div>
-   <div class="contenedor">
-     <div class="input-contenedor">
+     <div class="contenedor">
+        <div class="input-contenedor">
           <i class="fas fa-envelope icon"></i>
           <input type="text" placeholder="correo electronico">
           <span class="error-message">Ingrese correo</span> 
-     </div>
-
-      <div class="input-contenedor">
+        </div>
+       <div class="contenedor">
+         <div class="input-contenedor">
            <i class="fas fa-key icon"></i>
            <input type="password" placeholder="Contraseña">
            <span class="error-message">Ingresar su contraseña</span>
-      </div>
-      
-      <div class="input-contenedor">
+          </div>
+       <div class="contenedor">
+         <div class="input-contenedor">
             <i class="fas fa-key icon"></i>
             <input type="password" placeholder=" Repetir Contraseña">
             <span class="error-message">Debe re-ingresar su contraseña</span>
-      </div>
-    
-     <input type="submit" class="btn solid" value="Crear cuenta" />
+           </div>
+           </div>
+      <input type="submit" class="btn solid" value="Crear cuenta" />
         <p>Estoy de Acuerdo con <a href="#">Terminos y Condiciones</a></p>
-  <div class="form--group">
-      <label for="avatar">Avatar</label>
-      <input type="file" name="avatar" id="avatar" >
-          <small class="text-danger">Campo requerido</small>
-      <span class="error-message">Hubo un error en el registro</span>
-     <button class="btn btn-outline-success" type="reset">Limpiar</button>
-     <p><a href="login.html">Ya tengo Cuenta</a></p>
-    </div>
-  </div>
+        
+     </div>
+     <input class="botons" type="submit" value="Registrarme"> 
+     <span class="error-message">Hubo un error en el registro</span>
     </form>
-   
+    <p><a href="#">Ya tengo Cuenta</a></p>
+
 </body>
 </html>
