arreglos de alinamiento de carrito

--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -38,8 +38,10 @@
       
 </div> <!--cierra el producto -->
 
-        <div class="btn" >
-            <button class="btn-style" href="index.html">Seguir Comprando</button>
+<div class="btn" >
+            <a href="/"> 
+            <button class="btn-style" >Seguir Comprando</button>
+            </a>
             <button class="btn-style">Finalizar Compra</button>
         </div>
 </section>
