--- a/public/CSS/carrito2.css
+++ b/public/CSS/carrito2.css
@@ -1,12 +1,10 @@
 
-
 body{
     box-sizing: content-box;
 }
 
 .carrito2{
     display: block;
-    background-color: #FFFFFF;
    padding: 1em;
     width: 70%;
     height: auto;
@@ -27,15 +25,16 @@ h2{
     display: flex;
     flex-direction: column;
     border: 1px solid black;
+    background-color: white;
 }
 
 .product img{
     display: flex;
     justify-content: center;
-    width: 20%;
+    width: 25%;
     object-fit: contain;
     height: auto;
-    padding: 1em;
+    
     
 }
 
@@ -47,6 +46,7 @@ h2{
      align-content: center;
      justify-content: space-around;
      align-items: center;
+    
    }
    
 .price{
@@ -71,23 +71,21 @@ input{
     justify-content: center;
     align-content: center;
     align-items: center;
-    margin-top: 28px;
-    margin-bottom: auto;
-    margin-left: 0.5em;
+  
 }
 
 .section2{
     display: flex;
     width: 90%;
     flex-direction: column;
-margin: auto;
-justify-content: center;
+    margin: auto;
+    justify-content: center;
     text-align: center;
     width: 100%;
 }
 .section2 a{
     text-align: end;
-        align-items: center;
+    align-items: center;
 }
 
 
