--- a/src/views/admin/products/addProduct.ejs
+++ b/src/views/admin/products/addProduct.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<%-include('../../partials/head')  %> 
+<%-include('../partials/head')  %> 
 <body class="home-container admin-container">
-    <%-include('../../partials/header')  %> 
+    <%-include('../partials/header')  %> 
     
     <form action="" class="form-addProduct">
         
