--- a/views/registro.html
+++ b/views/registro.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
-<body>
+<body class="registro">
   <div class="logo">
     <img src="images/Central Music Logo.svg" alt="logo-fa-music" style="max-width: 100%;">
    </div>
