--- a/public/CSS/registro.css
+++ b/public/CSS/registro.css
@@ -1,102 +1,79 @@
-body {
-font-family: 'Work Sans';
-margin: 0;
-background: url(/images/lespaul.jpg);
-background-size: cover;
-background-attachment: fixed; 
-}
-* {
+*{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-family:'Work Sans, Sans Serif';
+    
+    
 }
-.contenedor {
+
+.form {
+    width: 400px;
+    height: 500px;
+    background-color: hsl(0, 0%, 15%);
+    color: white;
+    padding: 30px;
+    margin: auto;
+    margin-top: 100xp;
+    border-radius: 8px;
+    font-family:'Work Sans, Sans Serif'  ;
+}
+
+.form h2 {
+    font-size: 22px;
+    margin-bottom: 20px;
+}
+
+.control {
     width: 100%;
-    background-color: white;
-    padding: 15px;
+    background-color: hsl(0, 0%, 15%);
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 16px;
+    border: 1px solid #1f53c5;
+    font-family: 'Work Sans, Sans Serif';
+    font-size: 18px;
 }
-.formulario {
-    background-color: white;
-    margin-top: 150px;
-    padding: 3px;
-}
-
-h1{
+.form p{
+    height: 20px;
     text-align: center;
-    color: #1a2537;
-    font-size: 40px;
+    font-size: 16px;
+    line-height: 20px;
+    color: white;
 }
 
-input[type="tex"],
-input[type="pasword"] {
+.form a {
+    color: white;
+    text-decoration: none;
+}
+.form a:hover {
+    color: white;
+    text-decoration: underline;
+}
+
+.form .botons {
+    width: 100%;
+    background-color: #fa7a03;
+    border: none;
+    padding: 12px;
+    color: white;
+    margin: 16px 0;
+    font-size: 18px;
+    border-radius: 4px;
+}
+.input-style{
     font-size: 20px;
     width: 82%;
     background-color: white;
     padding: 10px;
     border: none;
-   
+    border-radius: 4px;
 }
-.span.error-message {
-    text-align: center;
-}
-.input-contenedor {
-    margin-bottom: 15px;
-    border: 1px solid #aaa;
-    background-color: white;
-}
-.icon{
-    min-width: 50px;
-    text-align: center;
-    color: #999;
-}
-.button{
- border: none;
- width: 100%;
- color: white;
- font-size: 20px;
- background-color: #fa7a03; 
- padding: 15px 20px;
- border-radius: 5px;
- cursor: pointer;
-}
-.button:hover{
-    background-color:#fa7a03;
+.error-message {
+    text-align-last: auto;
 }
 
-.smedia-text{
-    padding: 0.7rem 0;
-    margin: 1rem;
-}
 
-.social-media{
-    display: flex;
-    justify-content: center;
-
-}
-
-.social-icon {
-    height: 46px;
-    width: 46px;
-    border: 1px solid #333;
-    margin: 0 0.45rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    color: #333;
-    font-size: 1.3rem;
-    border-radius: 50%;
-    transition: all 1s;
-}
-.icon-container {
-    display: flex;
-}
-
-.register-container{
-    padding-top: 10px;
-}
-.no-acc{
-    font-weight: bold;
-    font-size: 17px;
-}
 
 @media(min-width:768px){
 
